force-app/main/default/objects/DataHall__c/DataHall__c.object-meta.xml
<CustomObject>
    <description>A data hall (raised floor zone) within a Floor of a Site. Child of Floor__c. Parent of Inventory__c records.</description>
    <label>Data Hall</label>
    <nameField>
        <label>Data Hall Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Halls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>