force-app/main/default/objects/DataHall__c/fields/Customer_Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data_Hall__c</fullName>
    <label>Customer Data Hall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>