force-app/main/default/objects/DataHall__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Floor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Floor__c.Site__c</field>
            <operation>equals</operation>
            <valueField>$Source.Site__c</valueField>
        </filterItems>
        <infoMessage>Only floors from the selected site are shown. Select a site first.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Data Halls</relationshipLabel>
    <relationshipName>DataHalls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>