force-app/main/default/objects/DataHall__c/fields/Hall_Number__c.field-meta.xml
<CustomField>
    <fullName>Hall_Number__c</fullName>
    <description>Canonical hall number used in the inventory naming convention (e.g. 01, 02). Drives the DH prefix in inventory names.</description>
    <label>Hall Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>