force-app/main/default/objects/DataHall__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Master Detail to the Site__c Object, Sharing to be controlled by parent</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Data Halls</relationshipLabel>
    <relationshipName>DataHalls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>