force-app/main/default/objects/DataHall__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Floor__c</columns>
    <columns>Customer_Data_Hall__c</columns>
    <columns>Site__c</columns>
    <columns>Hall_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>